--- a/notebooks/demand_forecasting.ipynb
+++ b/notebooks/demand_forecasting.ipynb
@@ -11,7 +11,7 @@
        "2. Train Prophet model\n",
        "3. Evaluate model performance\n",
        "4. Simulate AWS SageMaker deployment\n",
-       "5. Generate visualization (simulating Tableau)"
+       "5. Generate D3.js visualization"
       ]
      },
      {
@@ -23,12 +23,12 @@
        "import sys\n",
        "sys.path.append('../src')\n",
        "import pandas as pd\n",
-       "from sklearn.metrics import mean_absolute_error, mean_squared_error\n",
+       "from sklearn.metrics import mean_absolute_error, mean_squared_error, f1_score\n",
        "import numpy as np\n",
        "from data_preprocessing import preprocess_data\n",
        "from model_training import train_and_forecast\n",
        "from aws_integration import simulate_aws_glue_job, simulate_sagemaker_deployment\n",
-       "from visualization import create_tableau_visualization\n",
+       "import streamlit.components.v1 as components\n",
        "\n",
        "# Step 1: Preprocess data\n",
        "preprocess_data('../data/sample_demand_data.csv', '../data/cleaned_demand_data.csv')"
@@ -55,24 +55,36 @@
        "    # Load historical data\n",
        "    df = pd.read_csv(data_path)\n",
        "    \n",
+       "    # Ensure 'ds' columns are datetime64[ns]\n",
+       "    df['ds'] = pd.to_datetime(df['ds'])\n",
+       "    forecast['ds'] = pd.to_datetime(forecast['ds'])\n",
+       "    \n",
        "    # Merge forecast with actual data on 'ds' (date column)\n",
        "    actual = df[['ds', 'y']].copy()\n",
        "    forecast = forecast[['ds', 'yhat']].copy()\n",
        "    merged = pd.merge(actual, forecast, on='ds', how='inner')\n",
        "    \n",
-       "    # Calculate metrics\n",
+       "    # Calculate regression metrics\n",
        "    mae = mean_absolute_error(merged['y'], merged['yhat'])\n",
        "    mse = mean_squared_error(merged['y'], merged['yhat'])\n",
        "    rmse = np.sqrt(mse)\n",
        "    \n",
+       "    # Calculate F1 score for binary classification\n",
+       "    # Use median demand as threshold to convert to binary labels\n",
+       "    threshold = df['y'].median()\n",
+       "    actual_binary = (merged['y'] > threshold).astype(int)\n",
+       "    predicted_binary = (merged['yhat'] > threshold).astype(int)\n",
+       "    f1 = f1_score(actual_binary, predicted_binary)\n",
+       "    \n",
        "    print(f'Mean Absolute Error (MAE): {mae:.2f}')\n",
        "    print(f'Mean Squared Error (MSE): {mse:.2f}')\n",
        "    print(f'Root Mean Squared Error (RMSE): {rmse:.2f}')\n",
+       "    print(f'F1 Score (binary classification, threshold={threshold:.2f}): {f1:.2f}')\n",
        "    \n",
-       "    return mae, mse, rmse\n",
+       "    return mae, mse, rmse, f1\n",
        "\n",
        "# Evaluate the model\n",
-       "mae, mse, rmse = evaluate_model('../data/cleaned_demand_data.csv', forecast)"
+       "mae, mse, rmse, f1 = evaluate_model('../data/cleaned_demand_data.csv', forecast)"
       ]
      },
      {
@@ -92,8 +104,100 @@
       "metadata": {},
       "outputs": [],
       "source": [
-       "# Step 5: Generate visualization\n",
-       "create_tableau_visualization('../data/forecast_output.csv')"
+       "# Step 5: Generate D3.js visualization\n",
+       "def create_d3_visualization(data_path, forecast_path):\n",
+       "    # Load data\n",
+       "    df = pd.read_csv(data_path)\n",
+       "    forecast = pd.read_csv(forecast_path)\n",
+       "    \n",
+       "    # Prepare data for D3.js\n",
+       "    df['type'] = 'actual'\n",
+       "    forecast['type'] = 'forecast'\n",
+       "    df = df[['ds', 'y', 'type']].rename(columns={'y': 'value'})\n",
+       "    forecast = forecast[['ds', 'yhat', 'type']].rename(columns={'yhat': 'value'})\n",
+       "    combined = pd.concat([df, forecast]).reset_index(drop=True)\n",
+       "    combined['ds'] = pd.to_datetime(combined['ds']).dt.strftime('%Y-%m-%d')\n",
+       "    combined.to_csv('../data/d3_data.csv', index=False)\n",
+       "    \n",
+       "    # Generate D3.js HTML\n",
+       "    d3_html = '''\n",
+       "<!DOCTYPE html>\n",
+       "<html>\n",
+       "<head>\n",
+       "    <script src=\"https://d3js.org/d3.v7.min.js\"></script>\n",
+       "    <style>\n",
+       "        .line-actual { stroke: steelblue; stroke-width: 2; }\n",
+       "        .line-forecast { stroke: orange; stroke-width: 2; stroke-dasharray: 5,5; }\n",
+       "        .dot-actual { fill: steelblue; }\n",
+       "        .dot-forecast { fill: orange; }\n",
+       "    </style>\n",
+       "</head>\n",
+       "<body>\n",
+       "    <svg width=\"800\" height=\"400\"></svg>\n",
+       "    <script>\n",
+       "        d3.csv('../data/d3_data.csv').then(function(data) {\n",
+       "            data.forEach(d => {\n",
+       "                d.ds = d3.timeParse('%Y-%m-%d')(d.ds);\n",
+       "                d.value = +d.value;\n",
+       "            });\n",
+       "\n",
+       "            const margin = {top: 20, right: 20, bottom: 30, left: 50};\n",
+       "            const width = 800 - margin.left - margin.right;\n",
+       "            const height = 400 - margin.top - margin.bottom;\n",
+       "\n",
+       "            const svg = d3.select('svg')\n",
+       "                .append('g')\n",
+       "                .attr('transform', `translate(${margin.left},${margin.top})`);\n",
+       "\n",
+       "            const x = d3.scaleTime()\n",
+       "                .domain(d3.extent(data, d => d.ds))\n",
+       "                .range([0, width]);\n",
+       "\n",
+       "            const y = d3.scaleLinear()\n",
+       "                .domain([0, d3.max(data, d => d.value)])\n",
+       "                .range([height, 0]);\n",
+       "\n",
+       "            svg.append('g')\n",
+       "                .attr('transform', `translate(0,${height})`)\n",
+       "                .call(d3.axisBottom(x));\n",
+       "\n",
+       "            svg.append('g')\n",
+       "                .call(d3.axisLeft(y));\n",
+       "\n",
+       "            const line = d3.line()\n",
+       "                .x(d => x(d.ds))\n",
+       "                .y(d => y(d.value));\n",
+       "\n",
+       "            const dataByType = d3.group(data, d => d.type);\n",
+       "\n",
+       "            svg.selectAll('.line')\n",
+       "                .data(dataByType)\n",
+       "                .enter()\n",
+       "                .append('path')\n",
+       "                .attr('class', d => `line-${d[0]}`)\n",
+       "                .attr('d', d => line(d[1]));\n",
+       "\n",
+       "            svg.selectAll('.dot')\n",
+       "                .data(data)\n",
+       "                .enter()\n",
+       "                .append('circle')\n",
+       "                .attr('class', d => `dot-${d.type}`)\n",
+       "                .attr('cx', d => x(d.ds))\n",
+       "                .attr('cy', d => y(d.value))\n",
+       "                .attr('r', 3);\n",
+       "        });\n",
+       "    </script>\n",
+       "</body>\n",
+       "</html>\n",
+       "    '''\n",
+       "    with open('../visualizations/d3_visualization.html', 'w') as f:\n",
+       "        f.write(d3_html)\n",
+       "    \n",
+       "    # Display in notebook (for Streamlit, this is handled in app.py)\n",
+       "    components.html(d3_html, height=400)\n",
+       "\n",
+       "# Generate visualization\n",
+       "create_d3_visualization('../data/cleaned_demand_data.csv', '../data/forecast_output.csv')"
       ]
      }
     ],
